gitops/config/vikunja/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: apps
  labels:
    app: vikunja
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: vikunja
          image: docker.io/vikunja/vikunja:0.24.6
          ports:
            - containerPort: 3456
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /db
            - name: files
              mountPath: /files
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 384Mi
          livenessProbe:
            httpGet:
              path: /api/v1/info
              port: 3456
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/v1/info
              port: 3456
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vikunja-data
        - name: files
          persistentVolumeClaim:
            claimName: vikunja-data
