gitops/config/vikunja/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: apps
spec:
  selector:
    app: vikunja
  ports:
    - port: 3456
      targetPort: 3456
      protocol: TCP
  type: ClusterIP
