gitops/config/vikunja/manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vikunja
  namespace: apps
spec:
  hosts:
    - planner.nieri0x73.com
  gateways:
    - vikunja
  http:
    - route:
        - destination:
            host: vikunja
            port:
              number: 3456
